# automated_ecommerce_reporting

./: .gitignore  README.md  blinkit_scraper.py  helper_functions.py  main.py  pyproject.toml
build_docker/: Dockerfile
ecomScrapers/: blinkit_scraper.py  data_models.py  instamart_scraper.py  zepto_scraper.py
src/: .~lock.test_report.xlsx#  __init__.py  __main__.py  clean_data.py  config.py  daily_report.py  extract.py  load_data.py  report_generator.py  send_email.py  transform.py
src/ecomScrapers/: blinkit_scraper.py  constants.py  data_models.py  helper_functions.py  instamart_scraper.py  zepto_scraper.py
src/etl/: __init__.py  extract.py  load_data.py  transform.py
src/etl/ecomScrapers/: __init__.py  blinkit_scraper.py  instamart_scraper.py  zepto_scraper.py
src/reportGeneration/: __init__.py  excel_generator.py  report_generator.py  send_email.py
src/storeLocators/: __init__.py  blinkit_locator.py  find_locality.py  instamart_locator.py  instamart_map.html  store_locator.py  zepto_locator.py
src/utils/: __init__.py  constants.py  data_models.py  helper_functions.py  validators.py
tests/test_utils/: test_helper_functions.py
webSpiders/: scrapy.cfg  test_html.txt
webSpiders/webSpiders/: items.py  middlewares.py  pipelines.py  settings.py
webSpiders/webSpiders/spiders/: blinkitSpider.py  instamartSpider.py  zeptoSpider.py
