[project]
name = "saroj-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.2.0",
    "cloudscraper==1.2.71",
    "folium>=0.19.5",
    "fpdf2>=2.8.2",
    "google-cloud-bigquery>=3.30.0",
    "orjson==3.10.15",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "polars>=1.24.0",
    "polars-ds>=0.8.2",
    "pyarrow>=19.0.1",
    "pydantic==2.10.6",
    "pytest>=8.3.5",
    "requests==2.32.3",
    "selenium-driverless==1.9.4",
    "sqlalchemy>=2.0.38",
    "urllib3==2.3.0",
    "uv>=0.6.5",
    "xlsxwriter>=3.2.2",
]
